added weather icon and pictures

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="header">
              <h1>Weather - App</h1>
                 <img src="./icons/008-4.png" alt="">
-                <img src="#"  alt="weather icon" id="status" >
-            </div>
+                <img height="100px" width="100px" alt="weather icon" class="status" >
+        </div>
             <div class="blok">
               <div class="search">
                     <label for="location">Location</label>
