--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <div class="header">
              <h1>Weather - App</h1>
                 <img src="./icons/008-4.png" alt="">
+            <div class="icon">
                 <img height="100px" width="100px" alt="weather icon" class="status" >
+            </div>
         </div>
             <div class="blok">
               <div class="search">
