changed style, added copyright

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
 
                   </div>
             </div>
-        </div>  
+            <footer>copyright @ PetruD -Odin Project</footer> 
+
+        </div>
     </div>
     
 </body>
