--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <img height="100px" width="100px" alt="weather icon" class="status" >
             </div>
         </div>
-            <div class="blok">
+            <div class="block">
               <div class="search">
                     <label for="location">Location</label>
                     <input type="text" id="location">
@@ -30,33 +30,30 @@
                     <div>Region:</div>
                     <div class="arrea"></div>
                 </div>
-                  <div class="temperature">
-                      <div class="date"></div>
+                <div class="temperature">
+                    <p>Curent temperature:</p>
                       <div id="temp"></div>
-                      <div id="condition"></div>
-
-                      </div>
-                  <div class="wind-humidity">
+                </div>
+                <div class="local-time">
+                        <p>local time</p>
+                        <div class="date"></div>
+                        <p>conditions:</p>
+                        <div id="condition"></div>
+                </div>
+                <div class="wind-humidity">
                         <div>
-                           <p>Max wind  km/h</p>
+                           <p>Max wind speed:</p>
                            <div class="wind"></div>
                         </div>
                         <div>
-                           <p>humidity</p>
+                           <p>Humidity:</p>
                            <div class="humidity"></div>
                         </div>
-                  </div>
-                  <div class="uv-index">
-                      <p>Max UV index</p>
+                </div>
+                <div class="uv-index">
+                      <p>Max UV index:</p>
                       <div class="uv"></div>
-                  </div>
-                  <div class="sunrise-sunset">
-                      <p>Sunrise</p>
-                      <div class="sunrise">5:00</div>
-                      <p>Sunset</p>
-                      <div class="sunset">19:00</div>
-
-                  </div>
+                </div>
             </div>
             <footer>copyright @ PetruD -Odin Project</footer> 
 
