--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="content">
         <div class="header">
              <h1>Weather - App</h1>
-                <img src="./icons/008-4.png" alt="">
+            <img src="./icons/008-4.png" height="150px" alt="" class="emoji">
             <div class="icon">
                 <img height="100px" width="100px" alt="weather icon" class="status" >
             </div>
