changed date format

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <div class="content">
         <div class="header">
              <h1>Weather - App</h1>
-            <img src="./icons/008-4.png" height="150px" alt="" class="emoji">
+            <div class="emoji-item">
+                <img src="./icons/008-4.png" height="150px" alt="" class="emoji">
+            </div>
             <div class="icon">
                 <img height="100px" width="100px" alt="weather icon" class="status" >
             </div>
@@ -32,10 +34,10 @@
                 </div>
                 <div class="temperature">
                     <p>Curent temperature:</p>
-                      <div id="temp"></div>
+                    <div id="temp"></div>
                 </div>
-                <div class="local-time">
-                        <p>local time</p>
+                <div id="local-time">
+                        <p>local time:</p>
                         <div class="date"></div>
                         <p>conditions:</p>
                         <div id="condition"></div>
