changed date format

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
                 </div>
                 <div id="local-time">
                         <p>local time:</p>
-                        <div class="date"></div>
+                          <div style="display: block;">
+                            <div class="date"></div>
+                            <div class="hour"></div>
+                          </div>
                         <p>conditions:</p>
                         <div id="condition"></div>
                 </div>
