added picture bacground header

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
              <h1>Weather - App</h1>
             <div class="emoji-item">
                 <img src="./icons/008-4.png" height="150px" alt="" class="emoji">
-                <img src='https://cdn.weatherapi.com/v4/images/weatherapi_logo.png' height="50px" alt= "Weather data by WeatherAPI.com">
+                <img src='https://cdn.weatherapi.com/v4/images/weatherapi_logo.png' height="50px" alt= "Weather data by WeatherAPI.com" class="logo">
             </div>
             <div class="icon">
-                <img height="100px" width="100px" alt="weather icon" class="status" >
+                <img height="120px" width="120px" alt="weather icon" class="status" >
             </div>
         </div>
             <div class="block">
