changet complete the style, removed animation and pictures background

--- a/index.html
+++ b/index.html
@@ -11,21 +11,16 @@
 <body>
     <div class="content">
         <div class="header">
-             <h1>Weather - App</h1>
-            <div class="emoji-item">
-                <img src="./icons/008-4.png" height="150px" alt="" class="emoji">
-                <img src='https://cdn.weatherapi.com/v4/images/weatherapi_logo.png' height="50px" alt= "Weather data by WeatherAPI.com" class="logo">
-            </div>
-            <div class="icon">
-                <img height="120px" width="120px" alt="weather icon" class="status" >
-            </div>
+             <h1>Weather-today</h1>
+                <img src="./icons/008-4.png" height="60px" alt="" class="emoji">
+                <img src='https://cdn.weatherapi.com/v4/images/weatherapi_logo.png' height="30px" alt= "Weather data by WeatherAPI.com" class="logo">
         </div>
-            <div class="block">
+        <div class="block">
               <div class="search">
                     <label for="location">Location</label>
                     <input type="text" id="location">
                     <button type="submit" id="lookfor">
-                      <img src="./simbols/search.svg" alt="search simbol">
+                        <img src="./simbols/search.svg" alt="search simbol">
                     </button>
               </div>
               <div class="weather-data">
@@ -36,7 +31,10 @@
                 <div class="temperature">
                     <p>Curent temperature:</p>
                     <div id="temp"></div>
-                </div>
+                    <div class="im">
+                        <img height="60px" width="60px" alt="weather icon" class="status" >
+                    </div>
+                    </div>
                 <div id="local-time">
                         <p>local time:</p>
                           <div style="display: block;">
