added verifying methods

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="fQoQqAPuR1aF4mXRAg5aLnbrl-tVPSV65ohd1Bw0Fy0" />
     <link rel="stylesheet" href="style.css">
     <script src="weather.js" defer></script>
 
@@ -59,6 +60,7 @@
                       <div class="uv"></div>
                 </div>
             </div>
+            <img src="./simbols/linkedin.png" alt="">
             <footer>copyright @ PetruD -Odin Project</footer> 
 
         </div>
