introduced page description

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="google-site-verification" content="fQoQqAPuR1aF4mXRAg5aLnbrl-tVPSV65ohd1Bw0Fy0" />
     <link rel="stylesheet" href="style.css">
     <script src="weather.js" defer></script>
-
     <title>weather</title>
+    <meta name="description" content="weather app, check weather, check hour around globe, weather and hour in New York,
+    outside temperature, vremea, verifica vremea, ora in jurul globului, vremea acum, temperatura afara">
 </head>
 <body>
     <div class="content">
